--- a/film-network-ui/package.json
+++ b/film-network-ui/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "angular-code-input": "^2.0.0",
     "bootstrap": "^5.3.3",
+    "keycloak-js": "^26.1.1",
     "ng-openapi-gen": "^0.52.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
